...
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/add_task" />

            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleTextField"
                style="@style/textBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title">

                <com.google.android.material.textfield.TextInputEditText
...
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@{viewModel.title}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTextField"
                style="@style/textBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
...
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@{viewModel.description}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dueDateTextField"
                style="@style/textBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/due_date">

                <com.google.android.material.textfield.TextInputEditText
...
                    android:inputType="date"
                    app:localDate="@{viewModel.dueDate}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/estimatedTextField"
                style="@style/textBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estimated">

                <com.google.android.material.textfield.TextInputEditText
...
            <com.google.android.material.chip.ChipGroup
                style="@style/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSetReminder"
                    style="@style/Widget.MaterialComponents.Chip.Action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipIcon="@drawable/ic_alarm_24px"
                    app:localDateTime="@{viewModel.reminder}" />

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/title_task"
                style="@style/textBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mark as high priority"/>

            <Switch
...
                android:layout_margin="@dimen/layout_margin"
                />

        </LinearLayout>

            <Button
                android:id="@+id/insertTaskButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/create_button"
                android:textSize="14sp"
                app:backgroundTint="@color/colorSecondary" />
...
