...
                android:contentDescription="@string/display_task"
                app:srcCompat="@drawable/message_24"
                android:layout_marginStart="@dimen/text_size_14sp"
                />

            <TextView
                android:id="@+id/description_task"
                style="@style/textBox"
                android:textSize="@dimen/text_size_14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"/>

...
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/display_task"
                app:srcCompat="@drawable/calendar_today_24"
                android:layout_marginStart="@dimen/text_size_14sp"/>

            <TextView
                android:id="@+id/dueDate_task"
                style="@style/textBox"
                android:textSize="@dimen/text_size_14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toEndOf="@+id/display_task1" />
...
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/stop_button">

                    <!-- In the TextView, we can access the nightsString LiveData,
                         which keeps it displayed and updated in the TextView
                         whenever it changes. -->

                    <TextView
...

                <!-- With data binding and LiveData, we can track the buttons' visibility states
                     from the ViewModel. The click handler is in the ViewModel as well, and
                     you can set it for the Views using this lambda pattern. -->

                <Button
                    android:id="@+id/start_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:text="@string/start"
                    android:enabled="@{timeTrackerViewModel.startButtonVisible}"
                    android:onClick="@{() -> timeTrackerViewModel.onStartTracking()}"
...
